--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -5,7 +5,7 @@
   "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "nodemon": "nodemon server.ts | npx pino-pretty"
+    "nodemon": "nodemon server.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,13 +13,15 @@
   "type": "commonjs",
   "dependencies": {
     "@avalanche-sdk/client": "^0.1.1",
+    "@prisma/client": "^7.4.0",
     "axios": "^1.13.5",
     "dotenv": "^17.3.1",
-    "express": "^5.2.1",
+    "fastify": "^5.7.4",
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
     "nodemon": "^3.1.11",
-    "pino": "^10.3.1"
+    "pino": "^10.3.1",
+    "prisma": "^7.4.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
