--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name" : "Avax.exe",
     "owner" : {
         "name" : "Bankole Adedotun",
-        "github" : ""
-    }
+        "github" : "https://github.com/Mofe-Bankole",
+        "twitter" : "https://x.com/Mofe_bnks"
+    },
+    "github" : "https://github.com/Mofe-Bankole/avax.exe",
+    "version" : "1.0.0"
 }
