--- a/fastify_server/package.json
+++ b/fastify_server/package.json
@@ -15,7 +15,7 @@
     "@avalanche-sdk/client": "^0.1.1",
     "@fastify/helmet": "^13.0.2",
     "@fastify/oauth2": "^8.2.0",
-    "@prisma/adapter-ppg": "^7.4.0",
+    "@prisma/adapter-pg": "^7.4.1",
     "@prisma/client": "^7.4.0",
     "axios": "^1.13.5",
     "dotenv": "^17.3.1",
@@ -23,6 +23,7 @@
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
     "nodemon": "^3.1.11",
+    "pg": "^8.18.0",
     "pino": "^10.3.1"
   },
   "devDependencies": {
