--- a/fastify_server/package.json
+++ b/fastify_server/package.json
@@ -16,7 +16,7 @@
     "@fastify/helmet": "^13.0.2",
     "@fastify/oauth2": "^8.2.0",
     "@prisma/adapter-pg": "^7.4.1",
-    "@prisma/client": "^7.4.0",
+    "@prisma/client": "^7.4.1",
     "axios": "^1.13.5",
     "dotenv": "^17.3.1",
     "fastify": "^5.7.4",
@@ -24,7 +24,8 @@
     "morgan": "^1.10.1",
     "nodemon": "^3.1.11",
     "pg": "^8.18.0",
-    "pino": "^10.3.1"
+    "pino": "^10.3.1",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
@@ -32,7 +33,7 @@
     "@types/morgan": "^1.9.10",
     "@types/node": "^25.2.3",
     "pino-pretty": "^13.1.3",
-    "prisma": "^7.4.0",
+    "prisma": "^7.4.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
