--- a/fastify_server/package.json
+++ b/fastify_server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@avalanche-sdk/client": "^0.1.1",
     "@fastify/helmet": "^13.0.2",
+    "@fastify/jwt": "^10.0.0",
     "@fastify/oauth2": "^8.2.0",
     "@prisma/adapter-pg": "^7.4.1",
     "@prisma/client": "^7.4.1",
