Update : Added Core wallet signup , fixed auth routes, adding actual prod work

--- a/fastify_server/package.json
+++ b/fastify_server/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^3.1.11",
     "pg": "^8.18.0",
     "pino": "^10.3.1",
+    "socket-io": "^1.0.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
